--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
 font-family: sans-serif;
 text-transform: capitalize;
-background-image: url(Selva_tropical.webp);
+background-image: url(sola2.jpg);
 }
 .contenedor {
     max-width: 1200px;
@@ -59,4 +59,43 @@ background-image: url(Selva_tropical.webp);
 }
 .iconos a:hover{
     background-color: #00C3FF;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-weight: bold;
+}
+.logo {
+    width: 140px;
+    border-radius: 40px;
+}
+nav ul li {
+display: inline-block;
+padding: 0px 20px;
+
+}
+nav ul a {
+    color: black;
+    text-decoration: none;
+    transition: all .1s ease;
+}
+nav ul a:hover {
+    color: orange;
+}
+.navbar {
+    width: 100%;
+    height:150;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 30px 10%;
+    background: rgba(49, 47, 41, 0.2);
+    backdrop-filter:blur(3px);
+    background-color: #c9cab533;
+    
 }
